kubernetes/archive/deploy/unifi/services.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: unifi-svc
  name: unifi-tcp
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Local
  internalTrafficPolicy: Cluster
  ports:
  - name: controller
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: speedtest
    port: 6789
    protocol: TCP
    targetPort: 6789
  selector:
    name: unifi
  type: LoadBalancer
  loadBalancerIP: 192.168.100.52
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: unifi-svc
  name: unifi-udp
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Local
  internalTrafficPolicy: Cluster
  ports:
  - name: stun
    port: 3478
    protocol: UDP
    targetPort: 3478
  - name: syslog
    port: 5514
    protocol: UDP
    targetPort: 5514
  - name: discovery
    port: 10001
    protocol: UDP
    targetPort: 10001
  selector:
    name: unifi
  type: LoadBalancer
  loadBalancerIP: 192.168.100.52
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-web
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: https
    port: 8443
    protocol: TCP
  selector:
    name: unifi
  type: ClusterIP
