kubernetes/archive/deploy/unifi/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi
  namespace: unifi
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`unifi.vandeneede.org`)
      services:
        - name: unifi-web
          port: https
          scheme: https
